exports[`Rich Text Editor > Quote > using the toolbar > should preserve marks & inline elements #0`] =
{
  "content": [
    {
      "content": [
        {
          "content": [
            {
              "data": {},
              "marks": [
                {
                  "type": "bold"
                }
              ],
              "nodeType": "text",
              "value": "bold"
            },
            {
              "data": {},
              "marks": [],
              "nodeType": "text",
              "value": " "
            },
            {
              "data": {},
              "marks": [
                {
                  "type": "italic"
                }
              ],
              "nodeType": "text",
              "value": "italic"
            },
            {
              "data": {},
              "marks": [],
              "nodeType": "text",
              "value": " "
            },
            {
              "data": {},
              "marks": [
                {
                  "type": "underline"
                }
              ],
              "nodeType": "text",
              "value": "underline"
            },
            {
              "data": {},
              "marks": [],
              "nodeType": "text",
              "value": " "
            },
            {
              "data": {},
              "marks": [
                {
                  "type": "code"
                }
              ],
              "nodeType": "text",
              "value": "code"
            },
            {
              "data": {},
              "marks": [],
              "nodeType": "text",
              "value": " "
            },
            {
              "content": [
                {
                  "data": {},
                  "marks": [],
                  "nodeType": "text",
                  "value": "link"
                }
              ],
              "data": {
                "uri": "https://example.com"
              },
              "nodeType": "hyperlink"
            },
            {
              "data": {},
              "marks": [],
              "nodeType": "text",
              "value": " "
            },
            {
              "content": [],
              "data": {
                "target": {
                  "sys": {
                    "id": "example-entity-id",
                    "linkType": "Entry",
                    "type": "Link"
                  }
                }
              },
              "nodeType": "embedded-entry-inline"
            },
            {
              "data": {},
              "marks": [],
              "nodeType": "text",
              "value": " more text"
            }
          ],
          "data": {},
          "nodeType": "paragraph"
        }
      ],
      "data": {},
      "nodeType": "blockquote"
    },
    {
      "content": [
        {
          "data": {},
          "marks": [],
          "nodeType": "text",
          "value": ""
        }
      ],
      "data": {},
      "nodeType": "paragraph"
    }
  ],
  "data": {},
  "nodeType": "document"
};

exports[`Rich Text Editor > Quote > using hotkey (mod+shift+1) > should preserve marks & inline elements #0`] =
{
  "content": [
    {
      "content": [
        {
          "content": [
            {
              "data": {},
              "marks": [
                {
                  "type": "bold"
                }
              ],
              "nodeType": "text",
              "value": "bold"
            },
            {
              "data": {},
              "marks": [],
              "nodeType": "text",
              "value": " "
            },
            {
              "data": {},
              "marks": [
                {
                  "type": "italic"
                }
              ],
              "nodeType": "text",
              "value": "italic"
            },
            {
              "data": {},
              "marks": [],
              "nodeType": "text",
              "value": " "
            },
            {
              "data": {},
              "marks": [
                {
                  "type": "underline"
                }
              ],
              "nodeType": "text",
              "value": "underline"
            },
            {
              "data": {},
              "marks": [],
              "nodeType": "text",
              "value": " "
            },
            {
              "data": {},
              "marks": [
                {
                  "type": "code"
                }
              ],
              "nodeType": "text",
              "value": "code"
            },
            {
              "data": {},
              "marks": [],
              "nodeType": "text",
              "value": " "
            },
            {
              "content": [
                {
                  "data": {},
                  "marks": [],
                  "nodeType": "text",
                  "value": "link"
                }
              ],
              "data": {
                "uri": "https://example.com"
              },
              "nodeType": "hyperlink"
            },
            {
              "data": {},
              "marks": [],
              "nodeType": "text",
              "value": " "
            },
            {
              "content": [],
              "data": {
                "target": {
                  "sys": {
                    "id": "example-entity-id",
                    "linkType": "Entry",
                    "type": "Link"
                  }
                }
              },
              "nodeType": "embedded-entry-inline"
            },
            {
              "data": {},
              "marks": [],
              "nodeType": "text",
              "value": " more text"
            }
          ],
          "data": {},
          "nodeType": "paragraph"
        }
      ],
      "data": {},
      "nodeType": "blockquote"
    },
    {
      "content": [
        {
          "data": {},
          "marks": [],
          "nodeType": "text",
          "value": ""
        }
      ],
      "data": {},
      "nodeType": "paragraph"
    }
  ],
  "data": {},
  "nodeType": "document"
};

exports[`Rich Text Editor > New Line > in a list > should add a new line after entity block in same list item #0`] =
{
  "content": [
    {
      "content": [
        {
          "content": [
            {
              "content": [
                {
                  "data": {},
                  "marks": [],
                  "nodeType": "text",
                  "value": "some text 1"
                }
              ],
              "data": {},
              "nodeType": "paragraph"
            }
          ],
          "data": {},
          "nodeType": "list-item"
        },
        {
          "content": [
            {
              "content": [],
              "data": {
                "target": {
                  "sys": {
                    "id": "example-entity-id",
                    "linkType": "Entry",
                    "type": "Link"
                  }
                }
              },
              "nodeType": "embedded-entry-block"
            },
            {
              "content": [
                {
                  "data": {},
                  "marks": [],
                  "nodeType": "text",
                  "value": "some more text"
                }
              ],
              "data": {},
              "nodeType": "paragraph"
            },
            {
              "content": [],
              "data": {
                "target": {
                  "sys": {
                    "id": "example-entity-id",
                    "linkType": "Entry",
                    "type": "Link"
                  }
                }
              },
              "nodeType": "embedded-entry-block"
            },
            {
              "content": [
                {
                  "data": {},
                  "marks": [],
                  "nodeType": "text",
                  "value": ""
                }
              ],
              "data": {},
              "nodeType": "paragraph"
            }
          ],
          "data": {},
          "nodeType": "list-item"
        }
      ],
      "data": {},
      "nodeType": "unordered-list"
    },
    {
      "content": [
        {
          "data": {},
          "marks": [],
          "nodeType": "text",
          "value": ""
        }
      ],
      "data": {},
      "nodeType": "paragraph"
    }
  ],
  "data": {},
  "nodeType": "document"
};
